In detail pane, Timestamp is incorrectly decoded for ICMP Timestamp Response packets from MS Windows
This issue was migrated from bug 6114 in our old bug tracker.
Original bug information:
Reporter: Norbert Koot
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: 1.6.0
Attachments:
: Screenshot
ICMP_timestamps.pcap: Capture file including ICMP timestamps from XP machines
bug6114_1.patch: Heuristically determine endianness of originate, receive and transmit timestamps.
Timestamp_analysis.xls: Comparison of ICMP timestamp responses for 4 versions of MS Windows
ICMP_timestamps_only_Vista.pcap: Capture file of ICMP timestamps from Vista machine
ICMP_timestamps_only_XP.pcap: Capture file of ICMP timestamps from XP machines
bug6114_2.patch: Updated timestamp heuristics.