Apply some endian heuristics when dissecting ICMP originate, receive and transmit timestamps.  Fixes bug 6114.

Ref: https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=6114

svn path=/trunk/; revision=38129